openshift/flaskr-traced.app.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"flaskr:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"flaskr-traced\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
      sidecar.jaegertracing.io/inject: "true"
    creationTimestamp: null
    labels:
      app: flaskr-traced
      app.kubernetes.io/component: flaskr-traced
      app.kubernetes.io/instance: flaskr-traced
    name: flaskr-traced
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: flaskr-traced
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: flaskr-traced
      spec:
        containers:
        - image: ' '
          name: flaskr-traced
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: flaskr-traced
      app.kubernetes.io/component: flaskr-traced
      app.kubernetes.io/instance: flaskr-traced
    name: flaskr-traced
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deployment: flaskr-traced
  status:
    loadBalancer: {}
kind: List
metadata: {}
