openshift/flaskr1.app.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"flaskr:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"flaskr1\")].image"}]'
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: flaskr1
      app.kubernetes.io/component: flaskr1
      app.kubernetes.io/instance: flaskr1
    name: flaskr1
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: flaskr1
    strategy: {}
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deployment: flaskr1
      spec:
        containers:
        - env:
          - name: APP_VERSION
            value: 1.0.0
          image: ' '
          name: flaskr1
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
  status: {}
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: null
    labels:
      app: flaskr1
      app.kubernetes.io/component: flaskr1
      app.kubernetes.io/instance: flaskr1
    name: flaskr1
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      deployment: flaskr1
  status:
    loadBalancer: {}
kind: List
metadata: {}
