openshift/flaskr-ab.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  creationTimestamp: null
  labels:
    app: flaskr-ab
    app.kubernetes.io/component: flaskr-ab
    app.kubernetes.io/instance: flaskr-ab
  name: flaskr-ab
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: flaskr1
    weight: 50
  alternateBackends:
  - kind: Service
    name: flaskr2
    weight: 50
status: {}
